language/move-lang/tests/move_check/parser/use_module_member_invalid_missing_close_brace.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/use_module_member_invalid_missing_close_brace.move:6:5
  │
4 │     use 0x1::X::{S as XS
  │                 - To match this '{'
5 │ 
6 │     fun foo() {
  │     ^ Expected '}'

